--- a/TransicaoTelas/TransicaoTelasApp/TransicaoTelasApp/MyViewTwoPushed/MyViewTwo.storyboard
+++ b/TransicaoTelas/TransicaoTelasApp/TransicaoTelasApp/MyViewTwoPushed/MyViewTwo.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="U4v-aI-1X4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="GuF-xI-cWx">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
@@ -8,20 +8,20 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--My View Two View Controller-->
-        <scene sceneID="nTF-u4-Ti2">
+        <!--My View Two Pushed View Controller-->
+        <scene sceneID="9c3-Ms-l4b">
             <objects>
-                <viewController id="U4v-aI-1X4" customClass="MyViewTwoViewController" customModule="TransicaoTelasApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="AYF-Dn-Ldb">
+                <viewController id="GuF-xI-cWx" customClass="MyViewTwoPushedViewController" customModule="TransicaoTelasApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="VP0-xX-nWH">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="sDu-bM-2O4"/>
+                        <viewLayoutGuide key="safeArea" id="pOZ-NO-FG0"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="DTV-n7-ju8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JIA-le-NPo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="29" y="110"/>
+            <point key="canvasLocation" x="52" y="110"/>
         </scene>
     </scenes>
     <resources>
